<resources>
    <string name="app_name">CPS</string>
    <string name="admission_open">Admission Open Now</string>
    <string name="apply_now">Apply Now</string>
    <string name="contact">Contact us</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="contact_label">Esay way to school, we can help you</string>
    <string name="news">News</string>
    <string name="gallery">Gallery</string>
    <string name="event">Event</string>
    <string name="admission">Admission</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="error_empty_data">Please fill data first</string>
    <string name="error_email_format">Not email format</string>
    <string name="loading">Loading...</string>
    <string name="national_id">Student National ID / Passport</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="nationality">Nationality</string>
    <string name="religion">Religion</string>
    <string name="address">Address</string>
    <string name="apply_for">Applying For</string>
    <string name="second_language">Second Language</string>
    <string name="marital_status">Parents Marital Status</string>
    <string name="guardian">Guardian</string>
    <string name="transferred_school">Transferred School</string>
    <string name="have_bro_sis">Do you have Brother or Sister in CPS?</string>
    <string name="bus">Bus Use</string>
    <string name="grade">Grade</string>
    <string name="bro_sis_name">Brother / Sister Name</string>
    <string name="stu_title">Student Admission Information</string>
    <string name="guardian_title">Father/Guardian Information</string>
    <string name="emergency_title">Emergency Contact</string>
    <string name="mother_title">Mother Information</string>
    <string name="medical_title">Student Medical Information</string>
    <string name="declaration_title">Declaration</string>
    <string name="declaration_content">I hereby declare that all information provided in this application form is true to the best of my knowledge.</string>
    <string name="next">Next</string>
    <string name="notification">Notification</string>
    <string name="stu_medical">Student Medical Information</string>
    <string name="stu_relation">Relation to Student</string>
    <string name="father_name">Father / Guardian Name</string>
    <string name="father_phone">Phone Number</string>
    <string name="occupation">Occupation</string>
    <string name="mother_name">Mother Name</string>
</resources>
