<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="admission"
            type="com.cps.models.requests.SendAdmission" />
        <import type="android.view.View" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/sh_border_base2"
                        android:layout_marginBottom="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="5dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/emergency_title"/>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/et_stu_father_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:hint="@string/national_id"
                                app:errorEnabled="true"
                                errorNull="@{admission.stuNationalId}">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@={admission.stuNationalId}"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/et_stu_father_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:hint="@string/national_id"
                                app:errorEnabled="true"
                                errorNull="@{admission.stuFname}">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@={admission.stuFname}"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/et_stu_father_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:hint="@string/address"
                                app:errorEnabled="true"
                                errorNull="@{admission.stuAddress}">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@={admission.stuAddress}"/>
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/sh_border_base2"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="5dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/medical_title"/>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/et_stu_mother_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:hint="@string/national_id"
                                app:errorEnabled="true"
                                errorNull="@{admission.stuNationalId}">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@={admission.stuNationalId}"
                                    android:lines="5"
                                    android:gravity="start"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/sh_border_base2"
                        android:layout_marginTop="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="5dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/declaration_title"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/declaration_content"/>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>


                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>